Format sample requests properly

--- a/content/payments/billpay/api-integration/practices.mdx
+++ b/content/payments/billpay/api-integration/practices.mdx
@@ -35,10 +35,10 @@ Currently we don't allow retrying payment requests that fail due to error types 
 
 | Entity              | Request                      | Response                                          |
 |---------------------|------------------------------|---------------------------------------------------  |
-| BillFetchRequest    | {"billParameters": {}}       | {"refId": "A"}                                    |
-| BillFetchResponse   | {"refId": "A"}               | {"billData": {}}                                  |
-| BillPaymentRequest  | {"refId": "A", "payment":{}} | {"refId": "A"}                                    |
-| BillPaymentResponse | {"refId": "A"}               | {"transactionId":{}, "status": "Success/Failure"} |
+| BillFetchRequest    | `{"billParameters": {}}`     | `{"refId": "A"}`                                  |
+| BillFetchResponse   | `{"refId": "A"}`             | `{"billData": {}}`                                |
+| BillPaymentRequest  | `{"refId": "A", "payment":{}}` | `{"refId": "A"}`                                  |
+| BillPaymentResponse | `{"refId": "A"}`             | `{"transactionId":{}, "status": "Success/Failure"}` |
 
 
 
@@ -54,20 +54,22 @@ Currently we don't allow retrying payment requests that fail due to error types 
 
 | Entity              | Request                      | Response                                                                    |
 |---------------------|------------------------------|-----------------------------------------------------------------------------  |
-| BillFetchRequest    | {"billParameters": {}}       | {"refId": "A"}                                                              |
-| BillFetchResponse   | {"refId": "A"}               | {"billData": {}}                                                            |
-| BillPaymentRequest  | {"refId": "A", "payment":{}} | {"refId": "A"}                                                              |
-| BillPaymentResponse | {"refId": "A"}               | {"refId": A", "transactionId":{}, "status": "Failure", "errorType": "BBPS"} |
-| BillPaymentRequest  | {"refId": "A", "payment":{}} | {"refId": "B"}                                                              |
-| BillPaymentResponse | {"refId": "B"}               | {"refId": "B", "transactionId":{}, "status": "Success"}                     |
+| BillFetchRequest    | `{"billParameters": {}}`     | `{"refId": "A"}`                                                            |
+| BillFetchResponse   | `{"refId": "A"}`             | `{"billData": {}}`                                                          |
+| BillPaymentRequest  | `{"refId": "A", "payment":{}}` | `{"refId": "A"}`                                                            |
+| BillPaymentResponse | `{"refId": "A"}`             | `{"refId": A", "transactionId":{}, "status": "Failure", "errorType": "BBPS"}` |
+| BillPaymentRequest  | `{"refId": "A", "payment":{}}` | `{"refId": "B"}`                                                            |
+| BillPaymentResponse | `{"refId": "B"}`             | `{"refId": "B", "transactionId":{}, "status": "Success"}`                   |
 
 
 #### Example
 
 <details>
   <summary>Fetch Request #1</summary>
+
   ### Request
-  ```js
+
+  ```json
 {
     "agent": {
         "channel": "INT",
@@ -108,7 +110,7 @@ Currently we don't allow retrying payment requests that fail due to error types 
 
 ### Response
 
-```js
+```json
 {
     "data": {
         "refId": "CE9U2F9RHQPJICM8SC0G87SZTUR23440700"
@@ -122,8 +124,10 @@ Currently we don't allow retrying payment requests that fail due to error types 
 
 <details>
   <summary>Fetch Response #1</summary>
+
   ### Request
-  ```js
+
+  ```json
 {
     "refId": "CE9U2F9RHQPJICM8SC0G87SZTUR23440700"
 }
@@ -131,7 +135,7 @@ Currently we don't allow retrying payment requests that fail due to error types 
 
 ### Response
 
-```js
+```json
 {
     "data": {
         "additionalInfo": [
@@ -181,8 +185,10 @@ Currently we don't allow retrying payment requests that fail due to error types 
 
 <details>
   <summary>Payment Request #1</summary>
+
   ### Request
-  ```js
+
+  ```json
 {
     "refId": "CE9U2F9RHQPJICM8SC0G87SZTUR23440700",
     "paymentDetails": {
@@ -196,7 +202,7 @@ Currently we don't allow retrying payment requests that fail due to error types 
 
 ### Response
 
-```js
+```json
 {
     "data": {
         "refId": "CE9U2F9RHQPJICM8SC0G87SZTUR23440700"
@@ -209,8 +215,10 @@ Currently we don't allow retrying payment requests that fail due to error types 
 
 <details>
   <summary>Payment Response #1</summary>
+
   ### Request
-  ```js
+
+  ```json
 {
     "refId": "CE9U2F9RHQPJICM8SC0G87SZTUR23440700"
 }
@@ -218,7 +226,7 @@ Currently we don't allow retrying payment requests that fail due to error types 
 
 ### Response
 
-```js
+```json
 {
     "data": {
         "failureReason": {
@@ -245,8 +253,10 @@ Currently we don't allow retrying payment requests that fail due to error types 
 
 <details>
   <summary>Payment Request #2</summary>
+
   ### Request
-  ```js
+
+  ```json
 {
     "refId": "CE9U2F9RHQPJICM8SC0G87SZTUR23440700",
     "paymentDetails": {
@@ -260,7 +270,7 @@ Currently we don't allow retrying payment requests that fail due to error types 
 
 ### Response
 
-```js
+```json
 {
     "data": {
         "refId": "CE9U4I9RHQPJICM8SCK0303EZUD23440705"
@@ -277,8 +287,10 @@ Currently we don't allow retrying payment requests that fail due to error types 
 
 <details>
   <summary>Payment Response #2</summary>
+
   ### Request
-  ```js
+
+  ```json
 {
     "refId": "CE9U4I9RHQPJICM8SCK0303EZUD23440705"
 }
@@ -286,7 +298,7 @@ Currently we don't allow retrying payment requests that fail due to error types 
 
 ### Response
 
-```js
+```json
 {
     "data": {
         "billerId": "OTOE00005XXZ43",
@@ -305,6 +317,7 @@ Currently we don't allow retrying payment requests that fail due to error types 
     "traceId": "CE9U4OHRHQPJICM8SCNG"
 }
 ```
+
 - Using the new refId, we can find the status of the second transaction.
 
 </details>
