Minor updates to BBPS OAuth Doc

--- a/content/payments/bbps/resources/oauth.mdx
+++ b/content/payments/bbps/resources/oauth.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: OAuth 2.0
-page_title: UPI Deeplinks OAuth 2.0
+page_title: BBPS OAuth 2.0
 order: 1
 visible_in_sidebar: true
 ---
@@ -80,6 +80,11 @@ This `access_token` would then be used to make `/bills/fetch` and `/bills/fetchR
     `}
 </CodeBlockWithCopy>
 
+<Callout type="warning">
+  Setu currently doesn't consume the <code>refresh_token</code>, but it is accepted if sent back in the response body.
+  Setu will make a new token request after the expiry of the previous <code>access_token</code>.
+  The default expiry of the <code>access_token</code> is required to be part of the OAuth2.0 configuration on Bridge.
+</Callout>
 
 
 <hr class="primary" />
