Tweak copy, change callout type and callout placement

--- a/content/payments/bbps/resources/oauth.mdx
+++ b/content/payments/bbps/resources/oauth.mdx
@@ -70,6 +70,14 @@ Based on the chosen `OAuth2.0 scheme` on Bridge, Setu will make either one of th
 }`}
 </CodeBlockWithCopy>
 
+<Callout type="tip">
+  Setu currently doesn't consume the <code>refresh_token</code>, but no error is thrown if you specify it in the response body.
+  Setu will fetch a new <code>access_token</code> after the expiry of the previous <code>access_token</code>.
+  The default expiry of the <code>access_token</code> is taken from the OAuth2.0 configuration on Bridge.
+</Callout>
+
+<br />
+
 This `access_token` would then be used to make `/bills/fetch` and `/bills/fetchReceipt` requests to the `Base URL` configured on Bridge as follows.
 
 <CodeBlockWithCopy language="shell">
@@ -79,12 +87,6 @@ This `access_token` would then be used to make `/bills/fetch` and `/bills/fetchR
     --data '{......}'
     `}
 </CodeBlockWithCopy>
-
-<Callout type="warning">
-  Setu currently doesn't consume the <code>refresh_token</code>, but it is accepted if sent back in the response body.
-  Setu will make a new token request after the expiry of the previous <code>access_token</code>.
-  The default expiry of the <code>access_token</code> is required to be part of the OAuth2.0 configuration on Bridge.
-</Callout>
 
 
 <hr class="primary" />
