--- a/content/payments/bbps/resources/oauth.mdx
+++ b/content/payments/bbps/resources/oauth.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: OAuth 2.0
-page_title: UPI Deeplinks OAuth 2.0
+page_title: BBPS OAuth 2.0
 order: 1
 visible_in_sidebar: true
 ---
@@ -70,6 +70,14 @@ Based on the chosen `OAuth2.0 scheme` on Bridge, Setu will make either one of th
 }`}
 </CodeBlockWithCopy>
 
+<Callout type="tip">
+  Setu currently doesn't consume the <code>refresh_token</code>, but no error is thrown if you specify it in the response body.
+  Setu will fetch a new <code>access_token</code> after the expiry of the previous <code>access_token</code>.
+  The default expiry of the <code>access_token</code> is taken from the OAuth2.0 configuration on Bridge.
+</Callout>
+
+<br />
+
 This `access_token` would then be used to make `/bills/fetch` and `/bills/fetchReceipt` requests to the `Base URL` configured on Bridge as follows.
 
 <CodeBlockWithCopy language="shell">
@@ -79,7 +87,6 @@ This `access_token` would then be used to make `/bills/fetch` and `/bills/fetchR
     --data '{......}'
     `}
 </CodeBlockWithCopy>
-
 
 
 <hr class="primary" />
