User events for BillPay and BSA API reference added

--- a/content/data/account-aggregator/bank-statement-analyser.mdx
+++ b/content/data/account-aggregator/bank-statement-analyser.mdx
@@ -24,5 +24,12 @@ available in the market. Move beyond simplistic bank statement analyses (Coming 
 3. Simple APIs & exquisite documentation: Seamless integration of the AA consent flow
 and BSA.
 
-4. 50+ indicators for all round financial health: Income analysis, expenditure analysis
-and categorization engines that allow
+4. 50+ indicators for all round financial health: Income analysis, expenditure analysis and categorization engines that allow to create a complete picture of an individual’s financial health
+
+<NextPage
+  info={{
+    description: "API reference of Bank Statement Analyser",
+    slug: "/data/account-aggregator/bank-statement-analyser/api-reference",
+    title: "API reference",
+  }}
+/>
