--- a/content/data/gst/quickstart.mdx
+++ b/content/data/gst/quickstart.mdx
@@ -53,8 +53,6 @@ While testing on Sandbox, you may use the following sample values—
 - Use 27AAICA3919J1CT for a valid GST with additional address present.
 - If you use any other values for `gstin`, you will get a inavlid gstin response.
 
-
-
 <Tabs
   tabs={[
     {
@@ -71,60 +69,60 @@ While testing on Sandbox, you may use the following sample values—
           <CodeBlockWithCopy language="json">
             {`POST  /api/verify/gst
 
-{
-"gstin": "27AAICB3918J1CT"
-} `}
+            {
+              "gstin": "27AAICB3918J1CT"
+            } `}
           </CodeBlockWithCopy>
           <hr className="tertiary" />
           <h5>Response</h5>
           <CodeBlockWithCopy language="json">
             {`{
-"data": {
-"address": {
-"additional": [],
-"principle": {
-"buildingName": "MESH COMPLEX",
-"buildingNumber": "WAREHOUSE H",
-"city": "",
-"district": "Thane",
-"floorNo": "SURVEY NO. 35/4, 36/2",
-"latitude": "",
-"location": "BHIWANDI",
-"longitude": "",
-"naturePlaceOfBusiness": "",
-"pinCode": "421302",
-"stateCode": "Maharashtra",
-"street": "SARAVALI"
-}
-},
-"company": {
-"constitutionOfBusiness": "Private Limited Company",
-"name": "XYZ SELLER SERVICES PRIVATE LIMITED",
-"natureOfBusinessActivity": "",
-"state": "State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
-"status": "Active",
-"taxPayerType": "Tax Collector (Electronic Commerce Operator)",
-"tradeName": "XYZ SELLER SERVICES PRIVATE LIMITED",
-"type": "Private Limited Company"
-},
-"gst": {
-"dateOfCancellation": "",
-"id": "27AAICB3918J1CT",
-"lastUpdatedDate": "",
-"registrationDate": "12/10/2018"
-},
-"jurisdiction": {
-"centre": "Commissionerate - BHIWANDI,Division - DIVISION IV,Range - RANGE-I (Jurisdictional Office)",
-"centreCode": "VQ0401",
-"state": "State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
-"stateCode": "MHCG1425"
-}
-},
-"message": "",
-"requestId": "e347e79b-dddc-49c1-b266-afb2c44843e8",
-"verification": "success",
-"traceId": "1-633f22e0-6eb8245d7043f93e1bf83604"
-} `}
+                "data": {
+                  "address": {
+                    "additional": [],
+                    "principle": {
+                    "buildingName": "MESH COMPLEX",
+                    "buildingNumber": "WAREHOUSE H",
+                    "city": "",
+                    "district": "Thane",
+                    "floorNo": "SURVEY NO. 35/4, 36/2",
+                    "latitude": "",
+                    "location": "BHIWANDI",
+                    "longitude": "",
+                    "naturePlaceOfBusiness": "",
+                    "pinCode": "421302",
+                    "stateCode": "Maharashtra",
+                    "street": "SARAVALI"
+                    }
+                  },
+                  "company": {
+                    "constitutionOfBusiness": "Private Limited Company",
+                    "name": "XYZ SELLER SERVICES PRIVATE LIMITED",
+                    "natureOfBusinessActivity": "",
+                    "state": "State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
+                    "status": "Active",
+                    "taxPayerType": "Tax Collector (Electronic Commerce Operator)",
+                    "tradeName": "XYZ SELLER SERVICES PRIVATE LIMITED",
+                    "type": "Private Limited Company"
+                  },
+                  "gst": {
+                    "dateOfCancellation": "",
+                    "id": "27AAICB3918J1CT",
+                    "lastUpdatedDate": "",
+                    "registrationDate": "12/10/2018"
+                  },
+                  "jurisdiction": {
+                    "centre": "Commissionerate - BHIWANDI,Division - DIVISION IV,Range - RANGE-I (Jurisdictional Office)",
+                    "centreCode": "VQ0401",
+                    "state": "State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
+                    "stateCode": "MHCG1425"
+                  }
+                },
+                "message": "",
+                "requestId": "e347e79b-dddc-49c1-b266-afb2c44843e8",
+                "verification": "success",
+                "traceId": "1-633f22e0-6eb8245d7043f93e1bf83604"
+              } `}
           </CodeBlockWithCopy>
         </>
       ),
@@ -136,7 +134,7 @@ While testing on Sandbox, you may use the following sample values—
         <>
           <p>
             <Badge type="success">SUCCESS</Badge> Setu has processed your
-            request successfully, but the request has an invalid{" "}
+            request successfully, the gsin {" "} is valid and has additional address. 
             <code>gstin</code>
           </p>
           <hr className="tertiary" />
@@ -144,75 +142,75 @@ While testing on Sandbox, you may use the following sample values—
           <CodeBlockWithCopy language="json">
             {`POST /api/verify/gst
 
-{
-"gstin": "27AAICA3919J1CT"
-} `}
+              {
+                "gstin": "27AAICA3919J1CT"
+              } `}
           </CodeBlockWithCopy>
           <hr className="tertiary" />
           <h5>Response</h5>
           <CodeBlockWithCopy language="json">
             {`{
-"data": {
-"address": {
-"additional": [
-{
-"buildingName": "",
-"buildingNumber": "DOOR NO, 17",
-"city": "",
-"district": "Dakshina Kannada",
-"floorNo": "1ST FLOOR",
-"latitude": "",
-"location": "ONNAKATTE KULAI OF MANGALORE",
-"longitude": "",
-"naturePlaceOfBusiness": "Office / Sale Office",
-"pinCode": "575019",
-"stateCode": "Karnataka",
-"street": "XYZ COMPLEX OPP MAHILA MANDALA"
-}
-],
-"principle": {
-"buildingName": "MESH COMPLEX",
-"buildingNumber": "WAREHOUSE H",
-"city": "",
-"district": "Thane",
-"floorNo": "SURVEY NO. 35/4, 36/2",
-"latitude": "",
-"location": "BHIWANDI",
-"longitude": "",
-"naturePlaceOfBusiness": "",
-"pinCode": "421302",
-"stateCode": "Maharashtra",
-"street": "SARAVALI"
-}
-},
-"company": {
-"constitutionOfBusiness": "Private Limited Company",
-"name": "XYZ SELLER SERVICES PRIVATE LIMITED",
-"natureOfBusinessActivity": "",
-"state": "State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
-"status": "Active",
-"taxPayerType": "Tax Collector (Electronic Commerce Operator)",
-"tradeName": "XYZ SELLER SERVICES PRIVATE LIMITED",
-"type": "Private Limited Company"
-},
-"gst": {
-"dateOfCancellation": "",
-"id": "27AAICB3918J1CT",
-"lastUpdatedDate": "",
-"registrationDate": "12/10/2018"
-},
-"jurisdiction": {
-"centre": "Commissionerate - BHIWANDI,Division - DIVISION IV,Range - RANGE-I (Jurisdictional Office)",
-"centreCode": "VQ0401",
-"state": "State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
-"stateCode": "MHCG1425"
-}
-},
-"message": "",
-"requestId": "e347e79b-dddc-49c1-b266-afb2c44843e8",
-"verification": "success",
-"traceId": "1-633f22e0-6eb8245d7043f93e1bf83604"
-}`}
+              "data": {
+                "address": {
+                  "additional": [
+                    {
+                    "buildingName": "",
+                    "buildingNumber": "DOOR NO, 17",
+                    "city": "",
+                    "district": "Dakshina Kannada",
+                    "floorNo": "1ST FLOOR",
+                    "latitude": "",
+                    "location": "ONNAKATTE KULAI OF MANGALORE",
+                    "longitude": "",
+                    "naturePlaceOfBusiness": "Office / Sale Office",
+                    "pinCode": "575019",
+                    "stateCode": "Karnataka",
+                    "street": "XYZ COMPLEX OPP MAHILA MANDALA"
+                    }
+                  ],
+                  "principle": {
+                    "buildingName": "MESH COMPLEX",
+                    "buildingNumber": "WAREHOUSE H",
+                    "city": "",
+                    "district": "Thane",
+                    "floorNo": "SURVEY NO. 35/4, 36/2",
+                    "latitude": "",
+                    "location": "BHIWANDI",
+                    "longitude": "",
+                    "naturePlaceOfBusiness": "",
+                    "pinCode": "421302",
+                    "stateCode": "Maharashtra",
+                    "street": "SARAVALI"
+                  }
+                },
+              "company": {
+                "constitutionOfBusiness": "Private Limited Company",
+                "name": "XYZ SELLER SERVICES PRIVATE LIMITED",
+                "natureOfBusinessActivity": "",
+                "state": "State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
+                "status": "Active",
+                "taxPayerType": "Tax Collector (Electronic Commerce Operator)",
+                "tradeName": "XYZ SELLER SERVICES PRIVATE LIMITED",
+                "type": "Private Limited Company"
+              },
+              "gst": {
+                "dateOfCancellation": "",
+                "id": "27AAICB3918J1CT",
+                "lastUpdatedDate": "",
+                "registrationDate": "12/10/2018"
+              },
+              "jurisdiction": {
+                "centre": "Commissionerate - BHIWANDI,Division - DIVISION IV,Range - RANGE-I (Jurisdictional Office)",
+                "centreCode": "VQ0401",
+                "state": "State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
+                "stateCode": "MHCG1425"
+              }
+            },
+            "message": "",
+            "requestId": "e347e79b-dddc-49c1-b266-afb2c44843e8",
+            "verification": "success",
+            "traceId": "1-633f22e0-6eb8245d7043f93e1bf83604"
+          } `}
           </CodeBlockWithCopy>
         </>
       ),
@@ -231,21 +229,20 @@ While testing on Sandbox, you may use the following sample values—
           <h5>Request</h5>
           <CodeBlockWithCopy language="json">
             {`POST /api/verify/gst
-
-{
-"gstin": "27AAICA3918J1C"
-} `}
+              {
+                "gstin": "27AAICA3918J1C"
+              } `}
           </CodeBlockWithCopy>
           <hr className="tertiary" />
           <h5>Response</h5>
           <CodeBlockWithCopy language="json">
             {`{
-"data": {},
-"message": "Invalid GSTIN / UID",
-"requestId": "f8baadba-5f92-481c-9ce4-f5ba45af030b",
-"verification": "success",
-"traceId": "1-633c15e8-24825b38477426d4165bb6c2"
-}`}
+              "data": {},
+              "message": "Invalid GSTIN / UID",
+              "requestId": "f8baadba-5f92-481c-9ce4-f5ba45af030b",
+              "verification": "success",
+              "traceId": "1-633c15e8-24825b38477426d4165bb6c2"
+            } `}
           </CodeBlockWithCopy>
         </>
       ),
@@ -256,37 +253,33 @@ While testing on Sandbox, you may use the following sample values—
       content: (
         <>
           <p>
-            <Badge type="failure">BAD REQUEST</Badge> Your request does not have{" "}
-            <code>consent</code> recorded as yes, from your customer’s end. This
-            is indicated by <code>y</code> or <code>Y</code> against the{" "}
-            <code>consent</code> param.
+            <Badge type="failure">ERROR</Badge> 
+            The request failed due to error at upstream provider
           </p>
           <hr className="tertiary" />
           <h5>Request</h5>
           <CodeBlockWithCopy language="json">
             {`POST /api/verify/gst
-{
-"gstin": "27AAICA3918J1C"
-} `}
+              {
+                "gstin": "27AAICA3918J1C"
+            } `}
           </CodeBlockWithCopy>
           <hr className="tertiary" />
           <h5>Response</h5>
           <CodeBlockWithCopy language="json">
             {`{
-"error": {
-"code": "upstream_error_response",
-"detail": "error response from upstream.",
-"requestId": "006425cd-7ebe-452a-9c0b-64e4df512324",
-"traceId": "1-633c1b9c-0ab06611209a2b750b610d23"
-}
-}`
-}
-
-</CodeBlockWithCopy>
-</>
-),
-},
-]}
+              "error": {
+              "code": "upstream_error_response",
+              "detail": "error response from upstream.",
+              "requestId": "006425cd-7ebe-452a-9c0b-64e4df512324",
+              "traceId": "1-633c1b9c-0ab06611209a2b750b610d23"
+              }
+            }`}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
 
 <br />
