--- a/content/data/bav/pennyless-drop/quickstart.mdx
+++ b/content/data/bav/pennyless-drop/quickstart.mdx
@@ -1,13 +1,13 @@
 ---
 sidebar_title: Quickstart
-page_title: Quickstart for Penny less drop
+page_title: Quickstart for PennyLess drop API
 order: 1
 visible_in_sidebar: false
 ---
 
-## Bank account verification using Penny less drop API
+## Bank account verification using PennyLess drop API
 
-The following guide describes a sync API implementation for Penny less drop API.
+The following guide describes a sync API implementation for PennyLess drop API.
 
 Here are the URLs you would need for this integration—
 
@@ -23,7 +23,7 @@ While testing on Sandbox, you may use the following sample values—
 
 <hr class="primary" />
 
-### Penny less drop API
+### PennyLess drop API
 
 <Row>
     <Portion desktopSpan="whole">
