--- a/content/data/kyc/overview.mdx
+++ b/content/data/kyc/overview.mdx
@@ -7,115 +7,100 @@ visible_in_sidebar: true
 
 <Element as="section">
     <Row marginBottom="none">
-        <Portion desktopSpan="half" marginTop="small">
+        <Portion desktopSpan="24" marginTop="small">
             <Heading as="h2" marginBottom="micro">
                 Verify individuals or businesses
             </Heading>
-            <Heading as="h5" weight="400" marginBottom="tiny">
+            <Heading as="h6" weight="400" marginBottom="tiny">
                 Verify users to disburse loans, make payouts, enable stock or
                 crypto investments, and more.
             </Heading>
-            <Heading as="h5" weight="400" marginBottom="tiny">
-                Get the best uptimes and availability. Integrate easy-to-use
-                APIs, or embed pre-built theme-able screens.
-            </Heading>
-            <Heading as="h5" weight="400" marginBottom="tiny">
+            <Heading as="h6" weight="400" marginBottom="tiny">
                 Below are the available data blocks for verification.
             </Heading>
-        </Portion>
-        <Portion desktopSpan="half">
-            <Element as="div">
-                <Element
-                    as="img"
-                    src="https://storage.googleapis.com/strapi-assets/latest/icon-identity/icon-identity.jpg"
-                    id="hero-image"
-                ></Element>
-            </Element>
         </Portion>
     </Row>
 </Element>
 
 <Row marginBottom="none">
-    <Portion desktopSpan="whole">
-        <Link href="/data/pan" passHref>
-            <Element as="a" isFullHeight isFullWidth>
-                <Card
-                    className="arrow-on-hover is-clickable"
-                    shape="rounded"
-                    padding="micro"
+    
+    <Portion desktopSpan="half" marginBottom="nano">
+        <Card className="product-card" shape="rounded" padding="micro">
+            <Link href="/data/pan">
+                <Element
+                    as="div"
+                    className="arrow-on-hover is-clickable vertically-centre-items push-to-ends"
                 >
-                    <Heading
-                        as="h6"
-                        className="has-arrow"
-                        margin="none"
-                        marginBottom="nano"
-                    >
-                        PAN verification
-                    </Heading>
-                </Card>
-            </Element>
-        </Link>
+                    <Element as="div">
+                        <Heading as="h6" className="has-arrow" marginBottom="nano">
+                            PAN verification
+                        </Heading>
+                    </Element>
+                    <Element as="div" alt="esign icon">
+                        <ESIGN className="icon-large" />
+                    </Element>
+                </Element>
+            </Link>
+        </Card>
     </Portion>
-    <Portion desktopSpan="whole">
-        <Link href="/data/okyc" passHref>
-            <Element as="a" isFullHeight isFullWidth>
-                <Card
-                    className="arrow-on-hover is-clickable"
-                    shape="rounded"
-                    padding="micro"
+    <Portion desktopSpan="half" marginBottom="nano">
+        <Card className="product-card" shape="rounded" padding="micro">
+            <Link href="/data/okyc">
+                <Element
+                    as="div"
+                    className="arrow-on-hover is-clickable vertically-centre-items push-to-ends"
                 >
-                    <Heading
-                        as="h6"
-                        className="has-arrow"
-                        margin="none"
-                        marginBottom="nano"
-                    >
-                        Aadhaar KYC
-                    </Heading>
-                </Card>
-            </Element>
-        </Link>
+                    <Element as="div">
+                        <Heading as="h6" className="has-arrow" marginBottom="nano">
+                            Aadhaar KYC
+                        </Heading>
+                    </Element>
+                    <Element as="div" alt="esign icon">
+                        <ESIGN className="icon-large" />
+                    </Element>
+                </Element>
+            </Link>
+        </Card>
     </Portion>
-    <Portion desktopSpan="whole">
-        <Link href="/data/digilocker" passHref>
-            <Element as="a" isFullHeight isFullWidth>
-                <Card
-                    className="arrow-on-hover is-clickable"
-                    shape="rounded"
-                    padding="micro"
+    <Portion desktopSpan="half" marginBottom="nano">
+        <Card className="product-card" shape="rounded" padding="micro">
+            <Link href="/data/digilocker">
+                <Element
+                    as="div"
+                    className="arrow-on-hover is-clickable vertically-centre-items push-to-ends"
                 >
-                    <Heading
-                        as="h6"
-                        className="has-arrow"
-                        margin="none"
-                        marginBottom="nano"
-                    >
-                        Digilocker
-                    </Heading>
-                </Card>
-            </Element>
-        </Link>
+                    <Element as="div">
+                        <Heading as="h6" className="has-arrow" marginBottom="nano">
+                            Digilocker
+                        </Heading>
+                    </Element>
+                    <Element as="div" alt="esign icon">
+                        <ESIGN className="icon-large" />
+                    </Element>
+                </Element>
+            </Link>
+        </Card>
     </Portion>
-    <Portion desktopSpan="whole">
-        <Link href="/data/bav" passHref>
-            <Element as="a" isFullHeight isFullWidth>
-                <Card
-                    className="arrow-on-hover is-clickable"
-                    shape="rounded"
-                    padding="micro"
+    <Portion desktopSpan="half" marginBottom="nano">
+        <Card className="product-card" shape="rounded" padding="micro">
+            <Link href="/data/bav">
+                <Element
+                    as="div"
+                    className="arrow-on-hover is-clickable vertically-centre-items push-to-ends"
                 >
-                    <Heading
-                        as="h6"
-                        className="has-arrow"
-                        margin="none"
-                        marginBottom="nano"
-                    >
-                        Bank account verification
-                    </Heading>
-                </Card>
-            </Element>
-        </Link>
+                    <Element as="div">
+                        <Heading as="h6" className="has-arrow" marginBottom="nano">
+                            Bank account verification
+                        </Heading>
+                    </Element>
+                    <Element as="div" alt="esign icon">
+                        <ESIGN className="icon-large" />
+                    </Element>
+                </Element>
+            </Link>
+        </Card>
     </Portion>
+
 </Row>
 
 <WasPageHelpful />
