--- a/content/data/kyc/overview.mdx
+++ b/content/data/kyc/overview.mdx
@@ -5,102 +5,6 @@ order: 1
 visible_in_sidebar: true
 ---
 
-<Element as="section">
-    <Row marginBottom="none">
-        <Portion desktopSpan="24" marginTop="small">
-            <Heading as="h2" marginBottom="micro">
-                Verify individuals or businesses
-            </Heading>
-            <Heading as="h6" weight="400" marginBottom="tiny">
-                Verify users to disburse loans, make payouts, enable stock or
-                crypto investments, and more.
-            </Heading>
-            <Heading as="h6" weight="400" marginBottom="tiny">
-                Below are the available data blocks for verification.
-            </Heading>
-        </Portion>
-    </Row>
-</Element>
-
-<Row marginBottom="none">
-    
-    <Portion desktopSpan="half" marginBottom="nano">
-        <Card className="product-card" shape="rounded" padding="micro">
-            <Link href="/data/pan">
-                <Element
-                    as="div"
-                    className="arrow-on-hover is-clickable vertically-centre-items push-to-ends"
-                >
-                    <Element as="div">
-                        <Heading as="h6" className="has-arrow" marginBottom="nano">
-                            PAN verification
-                        </Heading>
-                    </Element>
-                    <Element as="div" alt="esign icon">
-                        <ESIGN className="icon-large" />
-                    </Element>
-                </Element>
-            </Link>
-        </Card>
-    </Portion>
-    <Portion desktopSpan="half" marginBottom="nano">
-        <Card className="product-card" shape="rounded" padding="micro">
-            <Link href="/data/okyc">
-                <Element
-                    as="div"
-                    className="arrow-on-hover is-clickable vertically-centre-items push-to-ends"
-                >
-                    <Element as="div">
-                        <Heading as="h6" className="has-arrow" marginBottom="nano">
-                            Aadhaar KYC
-                        </Heading>
-                    </Element>
-                    <Element as="div" alt="esign icon">
-                        <ESIGN className="icon-large" />
-                    </Element>
-                </Element>
-            </Link>
-        </Card>
-    </Portion>
-    <Portion desktopSpan="half" marginBottom="nano">
-        <Card className="product-card" shape="rounded" padding="micro">
-            <Link href="/data/digilocker">
-                <Element
-                    as="div"
-                    className="arrow-on-hover is-clickable vertically-centre-items push-to-ends"
-                >
-                    <Element as="div">
-                        <Heading as="h6" className="has-arrow" marginBottom="nano">
-                            Digilocker
-                        </Heading>
-                    </Element>
-                    <Element as="div" alt="esign icon">
-                        <ESIGN className="icon-large" />
-                    </Element>
-                </Element>
-            </Link>
-        </Card>
-    </Portion>
-    <Portion desktopSpan="half" marginBottom="nano">
-        <Card className="product-card" shape="rounded" padding="micro">
-            <Link href="/data/bav">
-                <Element
-                    as="div"
-                    className="arrow-on-hover is-clickable vertically-centre-items push-to-ends"
-                >
-                    <Element as="div">
-                        <Heading as="h6" className="has-arrow" marginBottom="nano">
-                            Bank account verification
-                        </Heading>
-                    </Element>
-                    <Element as="div" alt="esign icon">
-                        <ESIGN className="icon-large" />
-                    </Element>
-                </Element>
-            </Link>
-        </Card>
-    </Portion>
-
-</Row>
+<KYC />
 
 <WasPageHelpful />
