--- a/content/data/gst/quickstart.mdx
+++ b/content/data/gst/quickstart.mdx
@@ -53,43 +53,34 @@ While testing on Sandbox, you may use the following sample values—
 -   If you use any other values for `gstin`, you will get a inavlid gstin response.
 
 <Tabs
-    tabs={[
+      tabs={[
         {
-            key: "1",
-            label: "200",
-            content: (
-                <>
-                    <Text size="small" weight="600">
-                        Type 1
-                    </Text>
-                    <Card padding="nano" shape="rounded" marginBottom="micro">
-                        <details>
-                            <summary>
-                                <Text
-                                    size="medium"
-                                    marginBottom="none"
-                                    paddingRight="medium"
-                                >
-                                    <Badge type="success">SUCCESS</Badge> Your
-                                    request has a valid <code>gstin</code> and
-                                    Setu has processed your request
-                                    successfully.
-                                </Text>
-                            </summary>
-                            <hr className="tertiary" />
-                            <h5>Request</h5>
-                            <CodeBlockWithCopy language="json">
-                                {`POST /api/verify/gst 
+          key: "1",
+          label: "200",
+          content: (
+            <>
+            <Text size="small" weight="600">Type 1</Text>
+            <Card padding="nano" shape="rounded" marginBottom="micro">
+  <details>
+    <summary>
+                <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="success">SUCCESS</Badge> Your request has a
+                        valid <code>gstin</code> and Setu has processed your
+                        request successfully.</Text>
+    </summary>
+              <hr className="tertiary" />
+              <h5>Request</h5>
+              <CodeBlockWithCopy language="json">
+                {`POST /api/verify/gst 
  
 { 
     "gstin": "27AAICB3918J1CT"
 } `}
-                            </CodeBlockWithCopy>
-                            <hr className="tertiary" />
-                            <h5>Response</h5>
-                            <p>You will get the following details—</p>
-                            <CodeBlockWithCopy language="json">
-                                {`{
+              </CodeBlockWithCopy>
+              <hr className="tertiary" />
+              <h5>Response</h5>
+              <p>You will get the following details—</p>
+              <CodeBlockWithCopy language="json">
+                {`{
   "data":{
     "address":{
       "additional":[
@@ -138,41 +129,32 @@ While testing on Sandbox, you may use the following sample values—
   "verification":"success",
   "traceId":"1-633f22e0-6eb8245d7043f93e1bf83604"
 }`}
-                            </CodeBlockWithCopy>
-                        </details>
-                    </Card>
-
-                    <Text size="small" weight="600">
-                        Type 2
-                    </Text>
-                    <Card padding="nano" shape="rounded" marginBottom="micro">
-                        <details>
-                            <summary>
-                                <Text
-                                    size="medium"
-                                    marginBottom="none"
-                                    paddingRight="medium"
-                                >
-                                    <Badge type="success">SUCCESS</Badge> Setu
-                                    has processed your request successfully, the{" "}
-                                    <code>gstin</code> is valid and has
-                                    additional address.
-                                </Text>
-                            </summary>
-                            <hr className="tertiary" />
-                            <h5>Request</h5>
-                            <CodeBlockWithCopy language="json">
-                                {`POST /api/verify/gst 
+              </CodeBlockWithCopy>
+              </details>
+              </Card>
+              
+              <Text size="small" weight="600">Type 2</Text>
+              <Card padding="nano" shape="rounded" marginBottom="micro">
+  <details>
+    <summary>
+                <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="success">SUCCESS</Badge> Setu has processed
+                        your request successfully, the <code>gstin</code> is valid and has
+                        additional address.</Text>
+    </summary>
+              <hr className="tertiary" />
+              <h5>Request</h5>
+              <CodeBlockWithCopy language="json">
+                {`POST /api/verify/gst 
  
 { 
     "gstin": "27AAICB3919J1CT" 
 } `}
-                            </CodeBlockWithCopy>
-                            <hr className="tertiary" />
-                            <h5>Response</h5>
-                            <p>You will get the following details—</p>
-                            <CodeBlockWithCopy language="json">
-                                {`{
+              </CodeBlockWithCopy>
+              <hr className="tertiary" />
+              <h5>Response</h5>
+              <p>You will get the following details—</p>
+              <CodeBlockWithCopy language="json">
+                {`{
   "data":{
     "address":{
       "additional":[
@@ -234,41 +216,32 @@ While testing on Sandbox, you may use the following sample values—
   "verification":"success",
   "traceId":"1-633f22e0-6eb8245d7043f93e1bf83604"
 }`}
-                            </CodeBlockWithCopy>
-                        </details>
-                    </Card>
-
-                    <Text size="small" weight="600">
-                        Type 3
-                    </Text>
-                    <Card padding="nano" shape="rounded" marginBottom="micro">
-                        <details>
-                            <summary>
-                                <Text
-                                    size="medium"
-                                    marginBottom="none"
-                                    paddingRight="medium"
-                                >
-                                    <Badge type="success">SUCCESS</Badge> Setu
-                                    has processed your request successfully, but
-                                    the request has an invalid{" "}
-                                    <code>gstin</code>
-                                </Text>
-                            </summary>
-                            <hr className="tertiary" />
-                            <h5>Request</h5>
-                            <CodeBlockWithCopy language="json">
-                                {`POST /api/verify/gst 
+              </CodeBlockWithCopy>
+              </details>
+              </Card>
+              
+              <Text size="small" weight="600">Type 3</Text>
+              <Card padding="nano" shape="rounded" marginBottom="micro">
+  <details>
+    <summary>
+                <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="success">SUCCESS</Badge> Setu has processed
+                        your request successfully, but the request has an invalid <code>gstin</code> 
+                        </Text>
+    </summary>
+              <hr className="tertiary" />
+              <h5>Request</h5>
+              <CodeBlockWithCopy language="json">
+                {`POST /api/verify/gst 
  
 { 
     "gstin": "27AAICA3918J1C" 
 } `}
-                            </CodeBlockWithCopy>
-                            <hr className="tertiary" />
-                            <h5>Response</h5>
-                            <p>You will get the following details—</p>
-                            <CodeBlockWithCopy language="json">
-                                {`{
+              </CodeBlockWithCopy>
+              <hr className="tertiary" />
+              <h5>Response</h5>
+              <p>You will get the following details—</p>
+              <CodeBlockWithCopy language="json">
+                {`{
   "data":{
     
   },
@@ -277,44 +250,36 @@ While testing on Sandbox, you may use the following sample values—
   "verification":"success",
   "traceId":"1-633c15e8-24825b38477426d4165bb6c2"
 }`}
-                            </CodeBlockWithCopy>
-                        </details>
-                    </Card>
-                </>
-            ),
+              </CodeBlockWithCopy>
+              </details>
+              </Card>
+            </>
+          ),
         },
         {
-            key: "2",
-            label: "500",
-            content: (
-                <>
-                    <Card padding="nano" shape="rounded" marginBottom="micro">
-                        <details open>
-                            <summary>
-                                <Text
-                                    size="medium"
-                                    marginBottom="none"
-                                    paddingRight="medium"
-                                >
-                                    <Badge type="failure">ERROR</Badge> The
-                                    request failed due to an error at our
-                                    upstream provider.
-                                </Text>
-                            </summary>
-                            <hr className="tertiary" />
-                            <h5>Request</h5>
-                            <CodeBlockWithCopy language="json">
-                                {`POST /api/verify/gst 
+          key: "2",
+          label: "500",
+          content: (
+            <>
+            <Card padding="nano" shape="rounded" marginBottom="micro">
+  <details open>
+    <summary>
+                <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="failure">ERROR</Badge> The request failed due to an error at our upstream provider.</Text>
+    </summary>
+              <hr className="tertiary" />
+              <h5>Request</h5>
+              <CodeBlockWithCopy language="json">
+                {`POST /api/verify/gst 
  
 { 
     "gstin": "27AAICA3918J1C" 
 } `}
-                            </CodeBlockWithCopy>
-                            <hr className="tertiary" />
-                            <h5>Response</h5>
-                            <p>You will get the following response—</p>
-                            <CodeBlockWithCopy language="json">
-                                {`{
+              </CodeBlockWithCopy>
+              <hr className="tertiary" />
+              <h5>Response</h5>
+              <p>You will get the following response—</p>
+              <CodeBlockWithCopy language="json">
+                {`{
     "error": {
         "code": "upstream_error_response",
         "detail": "error response from upstream.",
@@ -322,14 +287,16 @@ While testing on Sandbox, you may use the following sample values—
         "traceId": "1-633c1b9c-0ab06611209a2b750b610d23"
     }
 } `}
-                            </CodeBlockWithCopy>
-                        </details>
-                    </Card>
-                </>
-            ),
-        },
-    ]}
-></Tabs>
+              </CodeBlockWithCopy>
+              </details>
+              </Card>
+            </>
+          ),
+        }
+      ]}
+    ></Tabs>
+
+
 
 <br />
 <WasPageHelpful />
