--- a/content/data/gst/quickstart.mdx
+++ b/content/data/gst/quickstart.mdx
@@ -59,7 +59,7 @@ While testing on Sandbox, you may use the following sample values—
           label: "200",
           content: (
             <>
-            <Text size="small" weight="600">Success without additional address</Text>
+            <Text size="small" weight="600">Success valid GSTIN without additional address</Text>
             <Card padding="nano" shape="rounded" marginBottom="micro">
   <details>
     <summary>
@@ -133,7 +133,7 @@ While testing on Sandbox, you may use the following sample values—
               </details>
               </Card>
               
-              <Text size="small" weight="600">Success with additional address</Text>
+              <Text size="small" weight="600">Success valid GSTIN with additional address</Text>
               <Card padding="nano" shape="rounded" marginBottom="micro">
   <details>
     <summary>
