Update Quickstart for GST

--- a/content/data/gst/quickstart.mdx
+++ b/content/data/gst/quickstart.mdx
@@ -59,7 +59,7 @@ While testing on Sandbox, you may use the following sample values—
           label: "200",
           content: (
             <>
-            <Text size="small" weight="600">Type 1</Text>
+            <Text size="small" weight="600">Success valid GSTIN without additional address</Text>
             <Card padding="nano" shape="rounded" marginBottom="micro">
   <details>
     <summary>
@@ -133,7 +133,7 @@ While testing on Sandbox, you may use the following sample values—
               </details>
               </Card>
               
-              <Text size="small" weight="600">Type 2</Text>
+              <Text size="small" weight="600">Success valid GSTIN with additional address</Text>
               <Card padding="nano" shape="rounded" marginBottom="micro">
   <details>
     <summary>
@@ -220,7 +220,7 @@ While testing on Sandbox, you may use the following sample values—
               </details>
               </Card>
               
-              <Text size="small" weight="600">Type 3</Text>
+              <Text size="small" weight="600">Success invalid GSTIN</Text>
               <Card padding="nano" shape="rounded" marginBottom="micro">
   <details>
     <summary>
