update refund docs for UPI DL

--- a/content/payments/upi-deeplinks/notifications.mdx
+++ b/content/payments/upi-deeplinks/notifications.mdx
@@ -157,58 +157,46 @@ The refunds array in the notification provides the details of all transactions f
 
 <CodeBlockWithCopy language="json">
     {`{
-   "partnerDetails":{
-      "appID":"867480814940587229",
-      "productInstanceID":"867480814940587229"
-   },
-   "events":[
-      {
-         "data":{
-            "amountRefunded":{
-               "currencyCode":"INR",
-               "value":31000
-            },
-            "refunds":[
-               {
-                  "amount":{
-                     "currencyCode":"INR",
-                     "value":10000
-                  },
-                  "batchID":"",
-                  "billID":873352654237992447,
-                  "reason":"Payment amount validation failure",
-                  "transactionID":"5568091057939410",
-                  "type":"SetuInitiated"
-               },
-               {
-                  "amount":{
-                     "currencyCode":"INR",
-                     "value":20000
-                  },
-                  "batchID":"",
-                  "billID":873352932060300804,
-                  "reason":"TPV check failure",
-                  "transactionID":"9785339996312599",
-                  "type":"ThirdPartyVerification"
-               },
-               {
-                  "amount":{
-                     "currencyCode":"INR",
-                     "value":1000
-                  },
-                  "batchID":"c9ckrdk7ke4q5jfbdaag",
-                  "billID":873351677686580711,
-                  "reason":"Initiated by merchant",
-                  "transactionID":"1208286219397147",
-                  "type":"MerchantInitiated"
-               }
-            ]
-         },
-         "timeStamp":1650020190462,
-         "type":"REFUND_STATUS",
-         "id":"a2e41d61-fbef-42d5-a380-7e15713a15ab"
-      }
-   ]
+	"partnerDetails": {
+		"appID": "799310436687152247",
+		"productInstanceID": "799310436687152247"
+	},
+	"events": [{
+		"data": {
+			"amountRefunded": {
+				"currencyCode": "INR",
+				"value": 1500
+			},
+			"refunds": {
+				"Initiated": [{
+					"amount": {
+						"currencyCode": "INR",
+						"value": 1500
+					},
+					"batchID": "cfq51rppcne0a46h51k0",
+					"billID": "1099309493419771390",
+					"reason": "Initiated by merchant",
+					"transactionID": "7019851224174158",
+					"type": "MerchantInitiated"
+				}],
+				"Pending": [{
+					"amount": {
+						"currencyCode": "INR",
+						"value": 3000
+					},
+					"batchID": "cfq51rppcne0a46h51k0",
+					"billID": "1099309092570138096",
+					"reason": "Initiated by merchant",
+					"transactionID": "8271601534619864",
+					"type": "MerchantInitiated"
+				}],
+				"Rejected": []
+			}
+		},
+		"timeStamp": 1676955892641,
+		"type": "REFUND_STATUS",
+		"id": "f042a983-d1d5-4ea6-9ef9-aa6826728839"
+	}]
 }`}
 </CodeBlockWithCopy>
 <br />
